--- a/IdentityClientWebApp/IdentityClientWebApp.csproj
+++ b/IdentityClientWebApp/IdentityClientWebApp.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.9.3" />
+  </ItemGroup>
+
 </Project>
