Update the configuration file

--- a/IdentityClientWebApp/appsettings.json
+++ b/IdentityClientWebApp/appsettings.json
@@ -1,9 +1,29 @@
 {
+  "AllowedHosts": "*",
+  "AzureAd": {
+    "CallbackPath": "/signin-oidc",
+    "ClientCertificates": [
+      {
+        "CertificateStorePath": "CurrentUser/My",
+        "CertificateThumbprint": "Enter the certificate thumbprint obtained the Microsoft Entra admin center",
+        "SourceType": "StoreWithThumbprint"
+      }   
+    ],
+    "ClientId": "Enter_the_Application_Id_Here",
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "Enter_the_Tenant_Id_Here"
+  },
+  "DownstreamApi": {
+    "BaseUrl": "https://graph.microsoft.com/v1.0/",
+    "RelativePath": "me",
+    "Scopes": [ 
+      "user.read" 
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
